k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uselessapp
  labels:
    app: uselessapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: uselessapp
  template:
    metadata:
      labels:
        app: uselessapp
    spec:
      containers:
        - name: uselessapp
          image: sha256:6f8204c78c7991f050d34ac42d3be408c3eeb71c903ddf46d52be34679caf07e
          ports:
            - containerPort: 80
