k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uselessapp-ingress
spec:
  ingressClassName: caddy
  rules:
    - host: useless.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uselessapp-service
                port:
                  number: 80
